--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,10 @@
 .header{
-  background: #333;
+  background: var(--gray-800);
+  display: flex;
+  justify-content: center;
   height: 80px;
+  padding: 1.25rem 0;
+}
+.header img {
+  height: 3rem;
 }
